--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# --------------------
+# Python
+# --------------------
+__pycache__/
 
-/venv
+# --------------------
+# Virtual Environments
+# --------------------
+venv/
+# --------------------
+# Environment / Secrets
+# --------------------
 .env
